--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,5 +5,9 @@ libfilesearch_la_SOURCES = filesearch.c filesearch.h
 
 bin_PROGRAMS = filesearch
 filesearch_SOURCES = main.c
-filesearch_LDADD = libfilesearch.la  ../lib/argp/lib/libargp.a
+filesearch_LDADD = libfilesearch.la
+
+if DARWIN
+filesearch_LDADD += -L$(abs_top_srcdir)/lib/argp/lib/ -largp
+endif
 
