--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
 language: c
-install: apt-get install check
+compiler:
+- clang
+- gcc
+
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - gcc-4.8
+    - g++-4.8
+
+before_install:
+- sudo apt-get -qq update
+install:
+- sudo apt-get install -qq autoconf automake libtool pkg-config check
 
